--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=active_fit_back
+
+server.port=4545
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/active_fit
+spring.datasource.username = postgres
+spring.datasource.password = administrador
+spring.datasource.driverClassName = org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+#swagger
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+
